--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,8 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 nav {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     padding: 0 1rem 0 1rem;
-    background-color: aqua;
 }
 
 .navbar {
@@ -10,8 +16,18 @@ nav {
     align-items: center;
 }
 
-li {
-    list-style: none;
+.categorias{
+    display: flex;
+    gap: 20px;
+    list-style: none;    
+}
+
+.categoria{
+    list-style: none;    
+}
+
+.home{
+    font-size: 1.5rem;
 }
 
 a {
