--- a/src/components/ItemListContainer/itemlistcontainer.css
+++ b/src/components/ItemListContainer/itemlistcontainer.css
@@ -11,11 +11,12 @@
     flex-wrap: wrap;
     gap: 20px;
     justify-content: space-between;
+    margin: 0 3rem 0 3rem;
 }
 
 .cards{
     border: 1px solid;
-    background-color:bisque;
+    background-color:white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,10 +25,19 @@
     border-radius: 5%;
     padding: 1rem;
     margin: 0.5rem;
+    transition: 500ms all;
+    box-shadow: -1px -1px 3px 0 rgb(2, 2, 2), 1px 1px 8px 1px;
+}
+
+.cards:hover{
+    transform: scale(1.05);
+    box-shadow: (0, 0, 0, 0.1);
+    z-index: 1;
+    cursor: pointer;
 }
 
 .imgCards{
-    width: 55%;
-    height: 55%;
+    width: 50%;
+    height: 50%;
 }
 
