--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -8,48 +10,69 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 1rem 0 1rem;
 }
 
 .navbar {
     display: flex;
     align-items: center;
+    border: solid 1px;
+    position: sticky;
+    top: 0;
+    background: #431C47;
+    background: linear-gradient(135deg, #431C47, #82F5DD); ;
+
 }
 
 .categorias{
     display: flex;
     gap: 20px;
-    list-style: none;    
+    list-style: none;
 }
+
 
 .categoria{
     list-style: none;    
+    margin: 0 1rem 0 1rem;
+    transition: 500ms all;
+    transform:translateY(1.05) ;
+    box-shadow: (0, 0, 0, 0.1);
+    z-index: 1;
+    cursor: pointer;
 }
 
 .home{
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+    font-family: "Audiowide", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 a {
-    margin: 0 1rem 0 1rem;
     text-decoration: none;
     color: black;
+    font-family: "Audiowide", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .imagen-carrito {
     position: relative;
+    margin-right: 1rem;
 }
 
 .numero {
-    position: absolute;
+    position:absolute;
     background-color: red;
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 1.2rem;
+    height: 1.2rem;
     border-radius: 50%;
     color: aliceblue;
     display: flex;
     justify-content: center;
     align-items: center;
     top: 0;
-    left: 2rem;
+    left: 1.6rem;
 }
