--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -58,6 +58,11 @@ a {
     font-style: normal;
 }
 
+.navbar a:hover {
+    text-decoration: underline;
+
+}
+
 .imagen-carrito {
     position: relative;
     margin-right: 1rem;
