--- a/src/components/ItemListContainer/itemlistcontainer.css
+++ b/src/components/ItemListContainer/itemlistcontainer.css
@@ -26,7 +26,7 @@
     padding: 1rem;
     margin: 0.5rem;
     transition: 500ms all;
-    box-shadow: -1px -1px 3px 0 rgb(2, 2, 2), 1px 1px 8px 1px;
+    box-shadow: 7px 8px 23px #000;
 }
 
 .cards:hover{
